# agent-for-code-agents

./: .env.example  .gitignore  README.md  TROUBLESHOOTING.md  package-lock.json  pyproject.toml  simple_backend.py  start.bat  start.ps1
.claude/: settings.local.json
examples/gussing-number-game/: README.md  analysis_output.md  architecture.md  final_prompt.txt  task_plan.md
examples/rock-paper-scizzers/: README.md  analysis_output.md  architecture.md  final_prompt.txt  task_plan.md
examples/web-based-task/: README.md  analysis_output.md  architecture.md  final_prompt.txt  task_plan.md
frontend/: EDITOR_UPGRADE.md  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/editor/: page.tsx
frontend/app/editor-demo/: page.tsx
frontend/app/editor/[file]/: page.tsx
frontend/app/history/: page.tsx
frontend/app/project/[id]/: page.tsx
frontend/app/project/[id]/workflow/: page.tsx
frontend/app/project/new/: page.tsx
frontend/app/settings/: page.tsx
frontend/components/: error-boundary.tsx
frontend/components/chat/: chat-interface.tsx
frontend/components/editor/: advanced-markdown-editor.tsx  cross-page-manager.tsx  file-browser.tsx  markdown-editor.tsx  tiptap-editor.tsx  vditor-editor.tsx
frontend/components/forms/: project-form.tsx
frontend/components/layout/: header.tsx  main-layout.tsx  sidebar.tsx
frontend/components/project/: project-actions.tsx  project-dialogs.tsx
frontend/components/ui/: button.tsx  input.tsx  progress.tsx  textarea.tsx  toast.tsx
frontend/components/workflow/: workflow-steps.tsx
frontend/hooks/: use-project-loader.ts
frontend/lib/: api.ts  store.ts  utils.ts
src/agent_for_code_agents/: __init__.py  __main__.py  app.py
src/agent_for_code_agents/agents/: __init__.py  analysis_agent.py  architect_agent.py  prompt_optimization_agent.py  todo_planning_agent.py
src/agent_for_code_agents/config/: __init__.py  llm_config.py  prompts.py
src/agent_for_code_agents/core/: __init__.py  agent_base.py  orchestrator.py  progress_indicator.py
src/agent_for_code_agents/utils/: __init__.py  project_naming.py
workspace/: .gitkeep
