[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-for-code-agents"
version = "0.1.0"
description = "A multi-agent system that transforms natural language project ideas into structured prompts for code generation"
authors = [{name = "Agent Development Team"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # Core backend framework
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    
    # AI and LLM integration
    "openai>=1.3.8",
    "aiofiles>=23.2.1",
    "httpx>=0.25.2",
    
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.6",
    
    # Legacy dependencies for existing agents
    "requests>=2.28.1,<3.0.0",
    "tenacity>=8.2.3,<9.0.0",
    "jsonschema>=4.20.0",
    "starlette>=0.27",
    "python-dateutil>=2.8.2",
    "regex>=2022.1.18",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
agent-for-code-agents = "agent_for_code_agents.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true